Reemplazar el uso de Stream.collect(Collectors.toList()) por Stream.toList() en la clase GestorRepartos.java